Resumen, motivación y estructura documento

--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -199,9 +199,10 @@ Trabajo Fin de Máster: Título del Trabajo \\ [0.3em]
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Resumen}
 \label{sec:Resumen}
-\noindent En el presente trabajo se propone una arquitectura para la detección del machismo en la red de microblogging Twitter. En la actualidad, el abuso online se ha convertido en un gran problema, especialmente por el anonimato y la interactividad de la web que facilita el incremento y permanencia de este tipo de abusos. Se trata de un campo en el que ha aumentado la producción científica enormemente durante este mismo año y donde se han desarrollado competiciones con gran participación por parte de la comunidad científica. A lo largo del trabajo, se presenta el ciclo completo para la recolección de datos, preprocesamiento y construcción del sistema de clasificación. Se desarrolla un sistema...
-Se evalua... Los resultados demuestran ...\todo{Completar cuando se avance en el trabajo}
-Finalmente, se identifican algunos problemas y líneas de trabajo futuras.
+\noindent En el presente trabajo se propone una arquitectura para la detección del machismo en la red de microblogging Twitter. El objetivo es comprender los mecanismos y señales textuales que conlleven actitudes o lenguaje machista. Para ello, se compone un corpus que contiene texto con contenido y expresiones machistas utilizando como fuente de datos la red social Twitter. Para la creación del corpus, se desarrollará una herramienta que recopilará los mensajes creados en Twitter que contengan distintos términos que pueden conllevar comportamientos machistas. Las expresiones o términos que se buscan son aquellas que, de un modo u otro, minusvaloran el papel de las mujeres en nuestra sociedad, incentiven el abuso o acoso hacia las mujeres, o no les permita expresarse libremente. Existen gran cantidad de expresiones y términos que se utilizan a diario de modo consciente o no que minimizan el papel de la mujer en la sociedad. Expresiones como ``feminazi'', ``niñata'' o ``a fregar'' han sido utilizadas para recopilar los tweets. Asimismo, utilizando el corpus generado, se desarrolla un sistema de clasificación que permite detectar lenguaje machista de un modo automatizado. Se emplean distintos algoritmo de clasificación y se establecen dos líneas base que sirven como punto de partida para la evaluación del sistema.
+
+Finalmente, se ha realizado una evaluación exhaustiva del sistema de clasificación sobre el corpus creado para determinar su rendimiento. Los resultados obtenidos muestran que el procedimiento empleado es capaz de detectar el machismo en el corpus utilizado con un buen acierto. Sin embargo, se han detectado distintas limitaciones y problemas debido a la aproximación empleada.
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
